# ChangeLog for x11-terms/mrxvt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/mrxvt/ChangeLog,v 1.59 2007/11/20 05:30:18 kumba Exp $

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Stable on mips, per #198727.

  13 Nov 2007; Samuli Suominen <drac@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  amd64 stable wrt #198727

  11 Nov 2007; nixnut <nixnut@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Stable on ppc wrt bug 198727

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  alpha stable wrt #198727

  11 Nov 2007; Fabian Groffen <grobian@gentoo.org> mrxvt-0.5.1.ebuild,
  mrxvt-0.5.2-r1.ebuild, mrxvt-0.5.3-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  10 Nov 2007; Dawid Węgliński <cla@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Stable on x86 (bug #198727)

  10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> mrxvt-0.5.3-r1.ebuild:
  Fix variable quoting.

*mrxvt-0.5.3-r1 (27 Aug 2007)

  27 Aug 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/mrxvt-0.5.3-no-scroll-with-buffer.patch, -mrxvt-0.5.3.ebuild,
  +mrxvt-0.5.3-r1.ebuild:
  Fix scrolling bug.

*mrxvt-0.5.3 (22 Aug 2007)

  22 Aug 2007; Krzysiek Pawlik <nelchael@gentoo.org> +mrxvt-0.5.3.ebuild:
  Version bump, see bug #189872, thanks to Gautam Iyer
  <gi1242@users.sourceforge.net>.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; mrxvt-0.5.1.ebuild,
  mrxvt-0.5.2-r1.ebuild:
  Drop virtual/x11 references.

  02 Nov 2006; Mamoru KOMACHI <usata@gentoo.org> mrxvt-0.5.2-r1.ebuild:
  Added utempter USE flag. Thanks to Daniel Webert <rockoo@gmail.com>, James
  Rowe <jnrowe@ukfsn.org> and Jimmy Zhou <jmzhou13@hotmail.com>. This closes
  bug #67887.

*mrxvt-0.5.2-r1 (16 Oct 2006)

  16 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/mrxvt-0.5.2-no_debug_x.patch, -mrxvt-0.5.2.ebuild,
  +mrxvt-0.5.2-r1.ebuild:
  Add a patch to speed up mrxvt by removing X debug. See bug #151532.
