@@ -1,5 +1,5 @@
 AUX mrxvt-0.5.3-no-scroll-with-buffer.patch 2182 RMD160 0b05e382fe8736617961d8790786ba0341945caf SHA1 303de6d33aa76892f24c6fac7b93ac21a945fda5 SHA256 5c7b6e0e4f07b35d8ed14ef2c87e8c57bfc4806dcd01f6ee14ef0b233c5b6932
 DIST mrxvt-0.5.3.tar.gz 592897 RMD160 76fbbd5ba20215dd7785eafa07dae909029194ec SHA1 442006f1d797ea5464c5c49d26d0cdecf79160f4 SHA256 e2327b7fdf1db3f2152d7cbda564f638ec11a4bed17f69e6de985c888ab5d411
 EBUILD mrxvt-0.5.3-r1.ebuild 3300 RMD160 b68a57a8c4ce02ef8e3516cd01bd36ce34854d5d SHA1 a474700738c485df6b7c2b3d5a8aef4bc55e6c6b SHA256 071b990720e476f081c7e4358ff7bcb88d5268436ac0a5dae8faca2786e5980e
-MISC ChangeLog 8362 RMD160 cef95230896651e0eb820b75a870667273ed6047 SHA1 f5ae24ad829fb0105bfbbd79517795ed9209adb0 SHA256 4d9be3eeca6fb69e9b2c9c5de58d5ddacd697a17c24d2dce26f028e00eefa46c
-MISC metadata.xml 285 RMD160 7a393ddbd1e4bc0b8c8105de7db5fb64469ab0eb SHA1 e33da3adbda26c1cc1f8ea6c2773b114d22fcfd1 SHA256 849e6d884378550f853c172d2a2f5095b9a167259155c0ec629c893c3ac13b83
+MISC ChangeLog 8478 RMD160 407c151727800a4338bc5f34c02c5bc5b7320ead SHA1 a9b889e8fef8374a5eb416cd0eb81b96a69643ec SHA256 61a0ae249f24cca6bedf052141ea211870ea90bc3c3b79ddbf785d602ee7737e
+MISC metadata.xml 227 RMD160 4603991d222df002795ac3709a24e98165edd8d1 SHA1 ac9b347ba7ed1d5f92472126580ef32d63fb9bfa SHA256 ef0905299b05e713fbb019ae7ca5e3e6ebfbf32d47fdd4d803e96a3bda500f71
