@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-  <email>usata@gentoo.org</email>
-</maintainer>
-<maintainer>
-  <email>nelchael@gentoo.org</email>
-</maintainer>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>nelchael@gentoo.org</email>
+	</maintainer>
 </pkgmetadata>
